Fixed - bug 370336: Cell editors shifted when image is used in the item https://bugs.eclipse.org/bugs/show_bug.cgi?id=370336

--- a/bundles/org.eclipse.rap.rwt/resources/resource/theme/default.css
+++ b/bundles/org.eclipse.rap.rwt/resources/resource/theme/default.css
@@ -1272,8 +1272,8 @@ TreeColumn-SortIndicator:down {
 }
 
 Tree-Cell {
-  spacing: 0;
-  padding: 6px;
+  spacing: 3px;
+  padding: 6px 3px 6px 3px;
 }
 
 Tree-GridLine {
